# coevolution

.gitignore/: .gitignore
build_old/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
build_old/lib/: lsystem_python.cacca
build_old/lsystem/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_old/lsystem/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_old/lsystem/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
experiments/speed1_osc_1/: archive.txt  configuration.txt  distances.txt  evolution.txt  evolutionstate.txt  history.txt  log.txt  measures.txt  measures2.txt  morphological_grid_accumulated.txt  morphological_grid_summary.txt  temp.txt
experiments/speed1_osc_1/offspringpop1/: fitness2_0.txt  fitness2_1.txt  fitness2_10.txt  fitness2_12.txt  fitness2_13.txt  fitness2_15.txt  fitness2_16.txt  fitness2_17.txt  fitness2_18.txt  fitness2_19.txt  fitness2_2.txt  fitness2_21.txt  fitness2_22.txt  fitness2_26.txt  fitness2_27.txt  fitness2_30.txt  fitness2_31.txt  fitness2_32.txt  fitness2_33.txt  fitness2_34.txt  fitness2_35.txt  fitness2_36.txt  fitness2_37.txt  fitness2_38.txt  fitness2_39.txt  fitness2_40.txt  fitness2_44.txt  fitness2_46.txt  fitness2_48.txt  fitness2_5.txt  fitness2_53.txt  fitness2_54.txt  fitness2_55.txt  fitness2_56.txt  fitness2_57.txt  fitness2_58.txt  fitness2_59.txt  fitness2_60.txt  fitness2_61.txt  fitness2_62.txt  (+371 more)
experiments/speed1_osc_1/offspringpop2/: fitness2_100.txt  fitness2_102.txt  fitness2_103.txt  fitness2_104.txt  fitness2_105.txt  fitness2_106.txt  fitness2_108.txt  fitness2_109.txt  fitness2_110.txt  fitness2_111.txt  fitness2_112.txt  fitness2_113.txt  fitness2_114.txt  fitness2_115.txt  fitness2_116.txt  fitness2_117.txt  fitness2_118.txt  fitness2_121.txt  fitness2_122.txt  fitness2_123.txt  fitness2_124.txt  fitness2_125.txt  fitness2_126.txt  fitness2_127.txt  fitness2_128.txt  fitness2_129.txt  fitness2_130.txt  fitness2_131.txt  fitness2_132.txt  fitness2_133.txt  fitness2_134.txt  fitness2_135.txt  fitness2_136.txt  fitness2_137.txt  fitness2_140.txt  fitness2_141.txt  fitness2_143.txt  fitness2_145.txt  fitness2_146.txt  fitness2_148.txt  (+172 more)
experiments/speed1_osc_1/offspringpop3/: fitness2_150.txt  fitness2_151.txt  fitness2_154.txt  fitness2_155.txt  fitness2_156.txt  fitness2_158.txt  fitness2_159.txt  fitness2_160.txt  fitness2_161.txt  fitness2_162.txt  fitness2_163.txt  fitness2_164.txt  fitness2_165.txt  fitness2_166.txt  fitness2_167.txt  fitness2_168.txt  fitness2_169.txt  fitness2_170.txt  fitness2_171.txt  fitness2_173.txt  fitness2_174.txt  fitness2_175.txt  fitness2_176.txt  fitness2_177.txt  fitness2_178.txt  fitness2_179.txt  fitness2_183.txt  fitness2_185.txt  fitness2_186.txt  fitness2_188.txt  fitness2_189.txt  fitness2_191.txt  fitness2_192.txt  fitness2_194.txt  fitness2_195.txt  fitness2_198.txt  fitness2_199.txt  fitness_150.txt  fitness_151.txt  fitness_154.txt  (+172 more)
experiments/speed1_osc_1/offspringpop4/: fitness2_201.txt  fitness2_202.txt  fitness2_204.txt  fitness2_205.txt  fitness2_206.txt  fitness2_207.txt  fitness2_208.txt  fitness2_209.txt  fitness2_210.txt  fitness2_211.txt  fitness2_212.txt  fitness2_213.txt  fitness2_214.txt  fitness2_216.txt  fitness2_217.txt  fitness2_218.txt  fitness2_219.txt  fitness2_220.txt  fitness2_221.txt  fitness2_222.txt  fitness2_223.txt  fitness2_224.txt  fitness2_225.txt  fitness2_226.txt  fitness2_227.txt  fitness2_228.txt  fitness2_229.txt  fitness2_230.txt  fitness2_231.txt  fitness2_232.txt  fitness2_234.txt  fitness2_235.txt  fitness2_236.txt  fitness2_237.txt  fitness2_238.txt  fitness2_239.txt  fitness2_241.txt  fitness2_242.txt  fitness2_243.txt  fitness2_244.txt  (+180 more)
experiments/speed1_osc_1/offspringpop5/: fitness2_250.txt  fitness2_251.txt  fitness2_252.txt  fitness2_253.txt  fitness2_254.txt  fitness2_255.txt  fitness2_257.txt  fitness2_258.txt  fitness2_259.txt  fitness2_260.txt  fitness2_261.txt  fitness2_263.txt  fitness2_265.txt  fitness2_266.txt  fitness2_267.txt  fitness2_268.txt  fitness2_269.txt  fitness2_271.txt  fitness2_272.txt  fitness2_273.txt  fitness2_275.txt  fitness2_276.txt  fitness2_277.txt  fitness2_279.txt  fitness2_280.txt  fitness2_282.txt  fitness2_283.txt  fitness2_284.txt  fitness2_285.txt  fitness2_286.txt  fitness2_287.txt  fitness2_288.txt  fitness2_289.txt  fitness2_291.txt  fitness2_292.txt  fitness2_293.txt  fitness2_294.txt  fitness2_296.txt  fitness2_297.txt  fitness2_298.txt  (+174 more)
experiments/speed1_osc_1/offspringpop6/: fitness2_300.txt  fitness2_301.txt  fitness2_302.txt  fitness2_303.txt  fitness2_304.txt  fitness2_305.txt  fitness2_306.txt  fitness2_307.txt  fitness2_308.txt  fitness2_309.txt  fitness2_310.txt  fitness2_311.txt  fitness2_312.txt  fitness2_314.txt  fitness2_315.txt  fitness2_316.txt  fitness2_317.txt  fitness2_318.txt  fitness2_319.txt  fitness2_320.txt  fitness2_321.txt  fitness2_322.txt  fitness2_323.txt  fitness2_324.txt  fitness2_325.txt  fitness2_326.txt  fitness2_327.txt  fitness2_328.txt  fitness2_329.txt  fitness2_330.txt  fitness2_331.txt  fitness2_332.txt  fitness2_333.txt  fitness2_334.txt  fitness2_335.txt  fitness2_336.txt  fitness2_337.txt  fitness2_338.txt  fitness2_339.txt  fitness2_340.txt  (+192 more)
experiments/speed1_osc_1/offspringpop7/: fitness2_350.txt  fitness2_351.txt  fitness2_353.txt  fitness2_354.txt  fitness2_355.txt  fitness2_356.txt  fitness2_357.txt  fitness2_358.txt  fitness2_359.txt  fitness2_360.txt  (+214 more)
lsystem/: CMakeLists.txt  configuration.txt  main.cpp
lsystem/include/: DecodedGeneticString.h  Evolution.h  GeneticString.h  Genome.h  LSystem.h  Measures.h
lsystem/python/: CMakeLists.txt  EvolutionIndirect_python.cpp
lsystem/src/: DecodedGeneticString.cpp  Evolution.cpp  EvolutionIndirect.cpp  GeneticString.cpp  Genome.cpp  LSystem.cpp  Measures.cpp  Tests.cpp
(+90 files in other folders)
